Update and rename Tables css.html to Tables.html

--- a/Tables.html
+++ b/Tables.html
@@ -28,7 +28,7 @@ padding-top: 12px;padding-bottom: 10px;border: red;text-align: left;border:1px b
             <th>AGE</th></tr>
                 <tr>
                     <td>Chiyamiko</td>
-                    <td><a href="https://www.w3schools.com/Css/tryit.asp?filename=trycss_table_fancy" target="_blank">Diploma</a> in Acc</td>
+                    <td><a href="https://isobarwapenga.github.io/mpamba/selektion.html" target="_blank">Diploma</a> in Acc</td>
                     <td>28</td>
                 </tr>
                 <tr>
