--- a/selektion.html
+++ b/selektion.html
@@ -22,7 +22,7 @@
                 background-color: rgb(80, 65, 80);
             }
 
-            @media only screen and (max-width: 840px){
+            @media only screen and (max-width: 640px){
                 input, .logo, p, h1 {margin-left:25%;width: 100%;background-color:green;padding:30%;}
                 
             }
@@ -41,7 +41,8 @@
         <label for="nickname">nickname</label>
         <select id="nickname" name="nickname">
 <option>isobar</option>
-<option>bambo a zoey</option>
+<option><a href"https://isobarwapenga.github.io/mpamba/rest.html">bambo a zoey
+</a></option>
 <option>chiya</option>
         </select></form>
         <form action="/action_page.php">
