--- a/selektion.html
+++ b/selektion.html
@@ -41,12 +41,12 @@
         <label for="nickname">nickname</label>
         <select id="nickname" name="nickname">
 <option>isobar</option>
-<option><a href"https://isobarwapenga.github.io/mpamba/rest.html">bambo a zoey
+<option><a href="https://isobarwapenga.github.io/mpamba/rest.html">bambo a zoey
 </a></option>
 <option>chiya</option>
         </select></form>
         <form action="/action_page.php">
-        <input type="submit" value="perekani">
+        <input type="submit" value="perekani" href="https://isobarwapenga.github.io/mpamba/rest.html">
     </form>
 </div>
 </html>
