--- a/Tables.html
+++ b/Tables.html
@@ -3,19 +3,23 @@
     <head>
         <style>
 
-            /*navibar*/
+  /*Navi*/
   .topnav {
-  overflow: hidden;padding:30px 10px;position:fixed;
-  background-color: white;width:100%;
+  overflow: hidden;padding-top:0px;
+  background-color: rgb(12, 2, 2);position:fixed;width:100%;margin-top: 80px;
 }
-
-.topnav a {float:left;
+/* Style the topnav links */
+.topnav a {
+  float: left;
   display: block;
-  color: black;
-  text-align: center;
+  color: #f2f2f2;
+  text-align: center;cursor: pointer;
   padding: 10px 16px;
-  text-decoration: none;
+  text-decoration: none;margin-top:0px;
 }
+        .topnav a:hover{
+            background-color:green; color:white;font-family:lucida;cursor:block;
+        }
 
 @media only screen and (min-width:320px) and (max-width:730px){
     .topnav{width:100%}
@@ -23,9 +27,12 @@
 }
         </style>
     </head>
+    <body>
     <div class="topnav">
         <a>Moni</a><a>Nkhani</a>
     </div>
     <h1>JustSam</h1>
     <p>Takulandirani kuno a Yvonne</p>
+</body>
 </html>
+
