--- a/Tables.html
+++ b/Tables.html
@@ -29,7 +29,7 @@
     </head>
     <body>
     <div class="topnav">
-        <a>Moni</a><a>Nkhani</a>
+        <a>Moni</a><a>Nkhani yonse</a>
     </div>
     <h1>JustSam</h1>
     <p>Takulandirani kuno a Yvonne</p>
