--- a/index.html
+++ b/index.html
@@ -1,70 +1,50 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
+<!docutype html>
+    <html lang="en">
 
+    <head>
+        <title>chiya</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+           @media only screen and (max-width:960px){
+            div{width: 100%;}
+           }
+        </style>
+      
+    </head>
 
-body {
-  background-color: rgb(3, 41, 3);width:100%;
-}
+    <body>
+        <div class="main">
+            <div class="navbar">
+                <div class="icon"><div class="logo">
+                    <h2>JustSam</h2></div>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Takulanirani</a></li>
+                        <li><a href="#">Nkhani</a></li>
+                    </ul>
+                </div>
+                <div class="search">
+                    <input class="srch" type="search" name="" style="color: blue;" placeholder="sakani">
+                    <a href="#"> <button class="btn">Fufuzani</button> </a>
+                </div>
+                
+            </div>
+            <div class="content">
+                <h1>Poems,<br><span>Stories &</span><br>Articles</h1>
+                <p class="par">Thank God we are progressing<br>Thank God we are progressing<br>Thank God we are progressing</p>
 
-h1 {
-  color: white;
-  text-align: center;margin-right:10%;margin-left:10%;padding-top:15%;
-}
+                <button class="cn"><a href="#">Wakonzeka Yvone?</a></button>
+                <div class="form">
+                    <h2>logani apa</h2><br>
+                    <input type="email" name="email" placeholder="lowetsani email">
+                    <input type="password" placeholder="lowetsani password">
+                    <button class="btnn"><a href="#">logani</a></button>
 
-p {
-  font-family: verdana;
-  font-size: 14px; color: white;margin-right:10%;
-}
+                </div>
+            </div>
+        </div>
+    </body>
 
-/*submit button*/
-input[type=submit]{background-color:rgb(65, 57, 54);margin-left:30%;padding:10px 70px 10px 70px;margin-top:10%;border-radius:0.3cm;color:white;border-color: orangered;cursor: pointer;
-}
-input[type=submit].a{background-color:orangered;padding:10px 70px 10px 70px;margin-top:10%;border-radius:0.3cm;color:white;border-color: orangered;cursor: pointer;
-}
-input[type=submit]:hover{background-color:rgb(100, 67, 4);}
-/*navibar*/
-  .topnav {
-  overflow: hidden;padding:30px 10px;position:fixed;
-  background-color: white;width:100%;
-}
-.topnav a {float:left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 10px 16px;
-  text-decoration: none;
-}
-div.a{width:35px;height:5px;margin:6px 0;background-color:black;}
-
-@media screen (max-width:640px;){.topnav, input, body, p, h1 {width: 100%;}
-h1{background-color: black;padding-top:55%;}
-  
-}
-</style>
-</head>
-<body>
-
-<div class="topnav"><a><div></div></a>
-<a><div class="a"></div><div class="a"></div><div class="a"></div></a>
-<a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a>
-<a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a>
-<a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a>
-<a><div></div></a><a><div></div></a><a><div></div><a><div></div></a><a><div></div>
-<a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a><a><div></div></a>
-<a><form action="/action_page.php"><input type="submit" class="a"style="padding:10px 10px;" value="Dashboard">
-    <a><div></div></a><a><div></div></a> <a><div class="a"></div><div class="a"></div><div class="a"></div></a>
-</form>
-</div>
-<h1 style="font-family: oranienbaum;">Do your best
-work,
-supported by
-your
-subscribers</h1>
-<p style="padding-left:10%">Substack lets independent writers, like JustSam, and podcasters publish directly to their audience and get paid through subscription</p>
-  <form action="/action_page.php"><input type="submit" value="create your Substack"></form>
-</body>
-</html>
-
-
+    </html>
