--- a/selektion.html
+++ b/selektion.html
@@ -1,52 +1,70 @@
-<html>
-    <head>
-        <style>
-            /*logo*/
-            .logo{
-                font-family:'Times New Roman', Times, serif;font-weight: 300;font-size: 6cm;flex-grow: inherit;
-            }
-            /*colors*/
-            .logo .p {color: blueviolet;}
-            .logo .a {color: skyblue;cursor: cell;}
-            .logo .l {color: rgb(26, 163, 56);cursor:crosshair;}
-
-            input[type=text], select{
-                border: 1px 0 0 0 solid rgb(73, 76, 224);margin: 10px o;background-image: url('searchicon.png');
-                padding: 14px 70px;display: inline-block;margin-right: 40px;border-radius: 0.2cm;text-align: left;
-            }
-            input[type=submit]{
-                border:1px 0 0 0 solid rgb(133, 19, 38);
-                padding: 10px 28px;cursor:context-menu;background-color: blueviolet;background-position: center;
-            }
-            input[type=submit]:hover{
-                background-color: rgb(80, 65, 80);
-            }
-
-            @media only screen and (max-width: 640px){
-                input, .logo, p, h1 {margin-left:25%;width: 100%;background-color:green;padding:30%;}
-                
-            }
-        </style>
-    </head>
-    <div class="logo">
-        <span class="p" style="font-size: 4cm;">P </span><span class="a">A </span><span class="l">P </span><span class="a">I</span>
-    </div>
-<div>
-    <form action="/action_page.php">
-        <label for="dzina">dzina</label>
-        <input type="text" id="dzina" name="dzina" placeholder="lembani dzina lanu">
-
-
-      <form action="/action_page.php">
-        <label for="nickname">nickname</label>
-        <select id="nickname" name="nickname">
-<option>isobar</option>
-<option><a href="https://isobarwapenga.github.io/mpamba/rest.html">bambo a zoey
-</a></option>
-<option>chiya</option>
-        </select></form>
-        <form action="/action_page.php">
-        <input type="submit" value="perekani" href="https://isobarwapenga.github.io/mpamba/rest.html">
-    </form>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Isobar Papi</title>
+  <style>
+     body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 130vh;
+        }
+       
+        header {
+            background-color: #2974e6;
+            color: rgb(230, 233, 222);
+            padding: 10px 10px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #5bb309;
+            transition: 0.9s;
+            color: rgb(181, 196, 216);
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #2974e6;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+  </style>
+</head>
+<body>
+    <header>
+        <h1>Isobar Papi</h1>
+    </header>
+    <nav>
+        <a href="C:\Users\LENOVO\Desktop\python\website yanga\index copy.html">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <main>
+        <h2>mwaswera bwana Iwel</h2>
+        <p>This is a simple HTML website example. You can customize it to suit your needs!</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+    </footer>
+</body>
 </html>
