Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <nav>
         <a href="C:\Users\LENOVO\Desktop\python\website yanga\index copy.html">Home</a>
-        <a href="#about">About</a>
+        <a href="rest.html">About</a>
         <a href="#contact">Contact</a>
     </nav>
     <main>
@@ -68,3 +68,4 @@
     </footer>
 </body>
 </html>
+
