--- a/index.html
+++ b/index.html
@@ -1,71 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isobar Papi</title>
-  <style>
-     body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 130vh;
-        }
-       
-        header {
-            background-color: #2974e6;
-            color: rgb(230, 233, 222);
-            padding: 10px 10px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        nav {
-            background-color: #333;
-            overflow: hidden;
-        }
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background-color: #5bb309;
-            transition: 0.9s;
-            color: rgb(181, 196, 216);
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #2974e6;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-  </style>
+    <title>Writer's Homepage</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <header>
-        <h1>Isobar Papi</h1>
+        <h1> Isobar Papi</h1>
+        <p style="margin-top: -1%;"> Positive Art, Positive Impact</p>
     </header>
+
     <nav>
-        <a href="C:\Users\LENOVO\Desktop\python\website yanga\index copy.html">Home</a>
-        <a href="rest.html">About</a>
+        <a href="#home">Home</a>
+        <a href="Articles.html">Articles</a>
+        <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
-    <main>
-        <h2>mwaswera bwana Iwel</h2>
-        <p>This is a simple HTML website example. You can customize it to suit your needs!</p>
-    </main>
+
+    <div class="container">
+        <section class="hero">
+            <h2>Welcome, takulandirani</h2>
+            <p>They say actions speak louder than words so
+                I settled for the act o f writing.<br> Get set for
+                an experience that will leave you doubt your sanity,
+                 while holding you at a smile-point.</p>
+        </section>
+
+        <section id="articles" class="articles">
+            <article class="article-card">
+                <h3>Introduction</h3>
+                <div class="date">Published on January 12, 2026 | Isobar Walemba </div>
+                <p>Isobar Walemba </p>
+                <a href="#" id="readmore">Read More →</a>
+            </article>
+
+            <article class="article-card">
+                <h3>Finding Your Writing Voice</h3>
+                <div class="date">Published on January 12, 2026</div>
+                <p>Explore techniques to develop your unique writing voice and establish your authentic presence as a
+                    writer.</p>
+                <a href="#">Read More →</a>
+            </article>
+
+            <article class="article-card">
+                <h3>Writing Tips for Beginners</h3>
+                <div class="date">Published on December 5, 2024</div>
+                <p>A beginner's guide to writing: tips, tricks, and inspiration to help you start your writing journey.
+                </p>
+                <a href="#">Read More →</a>
+            </article>
+        </section>
+    </div>
+
     <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
+        <p>&copy; 2026 My Writing Haven. All rights reserved.</p>
     </footer>
 </body>
-</html>
 
+</html>
