--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <a href="#home">Home</a>
-        <a href="Articles.html">Articles</a>
+        <a href="articles.html">Articles</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
