--- a/articles.html
+++ b/articles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Articles</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -146,3 +146,4 @@ And my wife is not dying soon<br>
 </body>
 
 </html>
+
